[package]
name = "cornelis"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = { version = "*", features = ["im", "image", "png"] }
tracing = "0.1.22"
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
log = "0.4.11"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }
png = "*"
num = "*"
num-derive = "*"
num-traits = "*"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
